добавляет ссылку файл стиля

--- a/portfolio.html
+++ b/portfolio.html
@@ -4,6 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
     <title>web-studio</title>
 </head>
 <body>
@@ -51,47 +52,47 @@
             
             <ul>
                 <li>
-                    <img src="img/photo1.jpg" alt="фото" width="370">
+                    <img src="./img/img1-technokryak.jpg" alt="фото" width="370">
                     <h3>Технокряк</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="img/photo2.jpg" alt="фото" width="370">
+                    <img src="img/img2-poster.jpg" alt="фото" width="370">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="img/photo3.jpg" alt="фото" width="370">
+                    <img src="img/img3-seafood.jpg" alt="фото" width="370">
                     <h3>Ресторан Seafood</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="img/photo4.jpg" alt="фото" width="370">
+                    <img src="img/img4-prime.jpg" alt="фото" width="370">
                     <h3>Проект Prime</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="img/photo5.jpg" alt="фото" width="370">
+                    <img src="img/img5-boxes.jpg" alt="фото" width="370">
                     <h3>Проект Boxes</h3>
                     <p>Приложение</p>
                 </li>
                 <li>
-                    <img src="img/photo6.jpg" alt="фото" width="370">
+                    <img src="img/img6-monitor.jpg" alt="фото" width="370">
                     <h3>Inspiration has no Borders</h3>
                     <p>Веб-сайт</p>
                 </li>
                 <li>
-                    <img src="img/photo7.jpg" alt="фото" width="370">
+                    <img src="img/img7-book.jpg" alt="фото" width="370">
                     <h3>Издание Limited Edition</h3>
                     <p>Дизайн</p>
                 </li>
                 <li>
-                    <img src="img/photo8.jpg" alt="фото" width="370">
+                    <img src="img/img8-label.jpg" alt="фото" width="370">
                     <h3>Проект LAB</h3>
                     <p>Маркетинг</p>
                 </li>
                 <li>
-                    <img src="img/photo9.jpg" alt="фото" width="370">
+                    <img src="img/img9-nout.jpg" alt="фото" width="370">
                     <h3>Growing Business</h3>
                     <p>Приложение</p>
                 </li>
