--- a/index.html
+++ b/index.html
@@ -4,13 +4,17 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="./css/styles.css">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
     <title>web-studio</title>
 </head>
 <body>
     <header>
-        <a href="">WebStudio</a>
+        <a class="studiologo" href="">WebStudio</a>
         <nav>
-            <ul>
+            <ul class="navigation">
                 <li>
                     <a href="">Студия</a>
                 </li>
@@ -31,7 +35,7 @@
                     <a href="mailto:info@example.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+380991111111">+38 096 111 11 11</a>
+                    <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
                 </li>
             </ul>
       
