--- a/portfolio.html
+++ b/portfolio.html
@@ -104,18 +104,22 @@
         </section>
     </main>
     <footer>
-        <a href="">WebStudio</a>
-        <ul>
-            <li>
+       <section class="footer">
+        <a class="studiologo-foot" href="./index.html">
+            <span class="web">Web</span>Studio</a>
+        <address class="contact-footer">
+            <p class="adress">
                 <a href="https://goo.gl/maps/XTzRTvsHkbkcd92C7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
-            </li>
-            <li>
+            </p>
+            <p>
                 <a href="mailto:info@example.com">info@example.com</a>
-            </li>
-            <li>
+            </p>
+            <p>
                 <a href="tel:+380991111111">+38 099 111 11 11</a>
-            </li>
-        </ul>
+            </p>
+
+        </address> 
+       </section>
     </footer>
 </body>
 </html>
