--- a/portfolio.html
+++ b/portfolio.html
@@ -54,13 +54,13 @@
        
         <section>
             
-            <ul>
+            <ul class="menu-img">
                 <li>
                     <img src="./img/img1-technokryak.jpg" alt="фото" width="370">
                     <h3>Технокряк</h3>
                     <p>Веб-сайт</p>
                 </li>
-                <li>
+                <li> 
                     <img src="img/img2-poster.jpg" alt="фото" width="370">
                     <h3>Постер New Orlean vs Golden Star</h3>
                     <p>Дизайн</p>
