--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                     <a href="mailto:info@example.com">info@devstudio.com</a>
                 </li>
                 <li>
-                    <a href="tel:+38 099 111 11 11">+38 099 111 11 11</a>
+                    <a href="tel:+380991111111">+38 099 111 11 11</a>
                 </li>
             </ul>
       
