--- a/index.html
+++ b/index.html
@@ -4,10 +4,10 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>web-studio</title>
     <link rel="stylesheet" href="./css/styles.css">
     <link href="https://fonts.googleapis.com/css2?family=Raleway:wght@700&family=Roboto:wght@400;500;700;900&display=swap" rel="stylesheet">
-    <title>web-studio</title>
-</head>
+    </head>
 <body>
     <header>
         <a class="studiologo" href="./index.html">
@@ -15,7 +15,7 @@
         <nav>
             <ul class="navigation">
                 <li>
-                    <a href="">Студия</a>
+                    <a href="./index.html">Студия</a>
                 </li>
                 
                 <li>
@@ -44,6 +44,42 @@
         <section class="baner">
             <h1 class="title">Эффективные решения <br> для вашего бизнеса</h1>
             <button class="zakaz" type="button">Заказать услугу</button>
+        </section>
+        <section>
+            <ul class="description">
+                <li>
+                    <h3>
+                        Внимание к деталям
+                    </h3>
+                    <p>
+                        Идейные соображения, а также начало повседневной работы по формированию позиции.
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        Пунктуальность
+                    </h3>
+                    <p>
+                        Задача организации, в особенности же рамки и место обучения кадров влечет за собой.                        
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        Планирование
+                    </h3>
+                    <p>
+                        Равным образом консультация с широким активом в значительной степени обуславливает.                        
+                    </p>
+                </li>
+                <li>
+                    <h3>
+                        Современные технологии
+                    </h3>
+                    <p>
+                        Значимость этих проблем настолько очевидна, что реализация плановых заданий.  
+                    </p>
+                </li>
+            </ul>
         </section>
         <section>
             <h2 class="zanytie">Чем мы занимаемся</h2>
@@ -97,16 +133,19 @@
          <a class="studiologo-foot" href="./index.html">
              <span class="web">Web</span>Studio</a>
          <address class="contact-footer">
-             <p class="adress">
-                 <a href="https://goo.gl/maps/XTzRTvsHkbkcd92C7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
-             </p>
-             <p>
-                 <a href="mailto:info@example.com">info@example.com</a>
-             </p>
-             <p>
-                 <a href="tel:+380991111111">+38 099 111 11 11</a>
-             </p>
+             <ul>
+                 <li class="adress">
+                     <a href="https://goo.gl/maps/XTzRTvsHkbkcd92C7" target="_blank" rel="noreferrer noopener">г. Киев, пр-т Леси Украинки, 26</a>
+                 </li>
+                 <li>
+                     <a href="mailto:info@example.com">info@example.com</a>
  
+                 </li>
+                 <li>
+                     <a href="tel:+380991111111">+38 099 111 11 11</a>
+                 </li>
+ 
+             </ul>
          </address> 
         </section>
      </footer>
